--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -10,3 +10,80 @@
     import 'relative/path/to/stylesheet.scss';
 
 */
+
+p{
+    display: inline;
+}
+
+.todo-container{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    border: 1px black solid;
+    width: 400px;
+    padding: 30px;
+    min-height: 300px;
+}
+
+#app{
+    display: flex;
+    justify-content: center;
+    height: 100vh;
+    align-items: center
+}
+
+.todo-input{
+    padding: 3px 12px;
+    border-radius: 50px;
+    border: 1px black solid;
+    margin-bottom: 10px;
+
+}
+
+.todo-ul{
+    list-style-type: none;
+    width:100%;
+    padding:0;
+}
+
+.todo-checkbox{
+    margin-right: 10px
+}
+
+.todo-item{
+    display: flex;
+    width: 100%;
+    margin-block: 2px ;
+
+}
+
+.todo-delete-item{
+    margin-left: auto;
+    background-color: transparent;
+    border: none;
+
+}
+
+.todo-label{
+    margin-bottom: 0;
+}
+
+.todo-footer{
+    display: flex;
+    margin-top: auto;
+    align-items: center;
+    justify-content: space-evenly;
+    width: 100%;
+
+}
+
+.todo-item-left{
+    margin-bottom: 0;
+}
+
+.todo-undo-button, .todo-clearall-button{
+    background-color: transparent;
+    border-radius: 50px; 
+    border: 1px solid black;
+    padding: 8px 16px;
+}
